# GL-app-template

./: .gitignore  CMakeLists.txt  README.md
application/: CMakeLists.txt  app.cpp
application/include/: Application.hpp
application/src/: Application.cpp
doc/: CMakeLists.txt  Doxyfile.in
engine/: CMakeLists.txt
engine/doc/: Doxyfile.in
engine/src/: CubeMap.cpp  ElementBufferObject.cpp  Entity.cpp  FreeflyCamera.cpp  GLApplication.cpp  GLFWManager.cpp  GLWindowUtils.cpp  Image.cpp  InputManager.cpp  Model.cpp  Renderer.cpp  Shader.cpp  Sphere.cpp  Texture.cpp  (+4 more)
header/: FilePath.hpp  FreeflyCamera.hpp  GLApplication.hpp  GLError.hpp  Game.hpp  InputManager.hpp  Program.hpp  Shader.hpp  Sphere.hpp  TimeManager.hpp  TrackballCamera.hpp
include/: Application.hpp  Camera.hpp  Common.hpp  Container.hpp  CubeMap.hpp  ElementBufferObject.hpp  FilePath.hpp  FreeflyCamera.hpp  GLApplication.hpp  GLError.hpp  GLFWManager.hpp  GLWindowManager.hpp  GLWindowUtils.hpp  Game.hpp  InputManager.hpp  Iterator.hpp  Observer.hpp  Program.hpp  ProgramShader.hpp  Shader.hpp  Shader2.hpp  Sphere.hpp  TimeManager.hpp  TrackballCamera.hpp  VertexArrayObject.hpp  VertexBufferObject.hpp  WindowManager.hpp
shader/: skybox.vert
src/: Application.cpp  CubeMap.cpp  ElementBufferObject.cpp  FilePath.cpp  FreeflyCamera.cpp  GLApplication.cpp  GLError.cpp  GLFWManager.cpp  GLWindowUtils.cpp  Game.cpp  InputManager.cpp  Program.cpp  ProgramShader.cpp  Shader.cpp  Shader2.cpp  Sphere.cpp  TimeManager.cpp  TrackballCamera.cpp  VertexArrayObject.cpp  VertexBufferObject.cpp  app.cpp
(+74 files in other folders)
